<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">李桥的app</string>
    <string name="please_speak">请说话</string>
    <string name="speaking">说话中</string>
    <string name="cancel">取消</string>
    <string name="start">开始</string>
    <string name="circleButton"></string>
    <string name="clear">清空</string>
    <string name="textDanmuPort">端口号</string>
    <string name="textDanmu">请输入弹幕内容</string>
    <string name="yes">确定</string>
    <string name="no">无</string>
    <string name="save">保存识别结果</string>
    <string name="title_activity_danmu">弹幕</string>
    <string name="share">分享</string>
    <string name="title">标题</string>
    <string name="send">发送</string>
    <string name="notitle">无标题</string>
    <string name="status">状态：</string>
    <string name="tofinish">说完</string>
    <string name="in_recog">正在识别</string>
    <string name="finished">完成:</string>
    <string name="error_occur">出错: 0x%1$s</string>
    <string name="error_start">请稍等</string>
    <string name="is_canceled">已取消</string>
    <string name="try_again">重试</string>
    <string name="volume">音量</string>
    <string name="start_tune">开始音</string>
    <string name="end_tune">结束音</string>
    <string name="setting"></string>
    <string name="choose_prop_type">请选择垂直领域类型：</string>
    <string name="choose_language">请选择识别语言：</string>
    <string name="choose_dialog_theme">请选择识别对话框样式：</string>
    <string name="play_start_sound">播放开始音</string>
    <string name="play_end_sound">播放结束音</string>
    <string name="dialog_tips_sound">对话框提示音</string>
    <string name="show_vol">显示识别音量</string>
    <string name="use_default_audio_source">使用麦克风输入</string>
    <string name="files_title_list">文件列表</string>
    <string name="shangke">上课</string>
    <string name="view_html">点击查看Html效果</string>
    <string name="activity_label_dialog_tips">识别对话框提示语</string>
    <string name="activity_label_api">语音识别</string>
    <string name="activity_desc_api">开发者可以自定义识别的UI</string>
    <string name="activity_label_external">外部音频识别</string>
    <string name="activity_desc_external">不使用麦克风录音，使用外部音频识别。只支持PCM16位单声道音频。采样率16K或者8K</string>
    <string name="activity_label_nlu">语义理解示例</string>
    <string name="activity_desc_nlu">将语音转换为意图</string>
    <string name="dialog_show_tips_onstart">启动时显示提示列表</string>
    <string name="dialog_show_tips_onstart_summary">语音识别对话框展示后，不启动识别，首先展示提示列表，需要用户手工点击开始按钮</string>
    <string name="dialog_show_tip_onsilent">静音时显示一条提示</string>
    <string name="dialog_show_tip_onsilent_summary">识别启动后，如果3秒没有检测到语音起点，在声音动效下方显示一条提示语</string>
    <string name="dialog_show_help_onsilent">静音异常时显示帮助按钮</string>
    <string name="dialog_show_help_onsilent_summary">由于没有检测到用户语音，超时异常后将取消按钮替换为帮助按钮</string>
    <string name="file_title_label">TITLE</string>
    <string name="file_recognition_label">FILE</string>
    <string name="new_file">New File</string>
    <string name="show_subtitle">添个新文件？</string>
    <string name="hide_subtitle">Hide_Subtitle</string>
    <string name="subtitle">If you see something,say someting.</string>
    <string name="delete_file">Delete</string>

    <string-array name="prop_tpye">
        <item>输入</item>
        <item>热词</item>
        <item>地图</item>
        <item>音乐</item>
        <item>视频</item>
        <item>应用</item>
        <item>网页</item>
        <item>健康</item>
        <item>购物</item>
        <item>打电话</item>
    </string-array>
    <string-array name="languages">
        <item>普通话(中国)</item>
        <item>粤语(中国)</item>
        <item>英语(美国)</item>
    </string-array>
    <string-array name="dialog_theme">
        <item>暗蓝</item>
        <item>亮蓝</item>
        <item>暗绿</item>
        <item>亮绿</item>
        <item>暗橙</item>
        <item>亮橙</item>
        <item>暗红</item>
        <item>亮红</item>
    </string-array>
    <string-array name="command_tips">
        <item>北京天气怎么样</item>
        <item>打电话给移动客服</item>
        <item>北京到上海的飞机票</item>
        <item>讲个笑话</item>
        <item>百度大厦怎么走</item>
    </string-array>

    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world"></string>
    <string name="title_activity_fenci">FenciActivity</string>
    <string name="search_label">search</string>
    <string name="settings_description">搜索描述</string>
    <string name="search_hint">请输入搜索内容</string>
    <string name="title_activity_file">FileActivity</string>
    <string name="title_activity_file_list">FileListActivity</string>
    <string name="file_title_hint">file_title</string>
    <string name="files_title">files_title</string>

    <item name="viewPager" type="id"/>

</resources>