<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    android:orientation="vertical" >

    <fragment
        android:id="@+id/control_panel"
        android:name="com.baidu.android.voicedemo.ControlPanelFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/recognition_text"
        android:layout_width="317dp"
        android:layout_height="270dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#32CD32"
        android:ems="10"
        android:gravity="top"
        android:inputType="none"
        android:longClickable="true"
        android:textColor="#6B8E23"
        android:textIsSelectable="true"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonapisave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/control_panel"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttondanmuport"
        android:text="@string/save"
        android:textColor="#218868" />

    <EditText
        android:id="@+id/api_titletext"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/apiport"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/notitle"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#556B2F"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/apiport"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonapisave"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="52dp"
        android:ems="10"
        android:hint="@string/textDanmuPort"
        android:textColor="#218868" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonapiport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/apiport"
        android:layout_alignBottom="@+id/apiport"
        android:layout_marginLeft="45dp"
        android:layout_toRightOf="@+id/apiport"
        android:background="@drawable/buttondanmuport"
        android:text="@string/yes"
        android:textColor="#CDCD00" />

</RelativeLayout>