<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/status_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" >

        <TextView
            android:id="@+id/statusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/status"
            android:textColor="#556B2F"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/statusBodyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/statusTextView"
            android:layout_toRightOf="@+id/statusTextView"
            android:textColor="#556B2F"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/volumeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/statusTextView"
            android:layout_below="@+id/statusTextView"
            android:text="@string/volume"
            android:textColor="#556B2F"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ProgressBar
            android:id="@+id/volumeProgressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/volumeTextView"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_toRightOf="@+id/volumeTextView"
            android:max="100" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/start"
            style="@style/button_api"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_api"
            android:text="@string/start" />

        <Button
            android:id="@+id/cancelButton"
            style="@style/button_api"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_api"
            android:enabled="false"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>